--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="Images/Selfy.jpg" style="width:45%;"><br><br>
     <h4 class="w3-padding-0"><b>Miss Whitney K. Newcomb</b></h4>
   </div>
-  <a href="index.html" class="w3-padding w3-text-teal">Home</a>
-  <a href="Resume_CV.html" class="w3-padding">Resume and CV</a>
-  <a href="Cartography.html" class="w3-padding">Cartogaphy</a>
-  <a href="Web_Mapping.html" class="w3-padding">Web Mapping</a>
-  <a href="Contact.html" class="w3-padding">Contact</a>
+  <a href="/index.html" class="w3-padding w3-text-teal">Home</a>
+  <a href="/Resume_CV.html" class="w3-padding">Resume and CV</a>
+  <a href="/Cartography.html" class="w3-padding">Cartogaphy</a>
+  <a href="/Web_Mapping.html" class="w3-padding">Web Mapping</a>
+  <a href="/Contact.html" class="w3-padding">Contact</a>
    
   <div class="w3-section w3-padding-top w3-large">
     <a href="https://www.facebook.com/Whittaytay" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-facebook-official"></i></a>
