--- a/Web_Mapping.html
+++ b/Web_Mapping.html
@@ -18,19 +18,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <i class="fa fa-remove"></i>
     </a>
     <img src="Images/Selfy.jpg" style="width:45%;" class="w3-round"><br><br>
-    <h4 class="w3-padding-0"><b>Miss Whitney K. Newcomb</b></h4>
+    <h4 class="w3-padding-0"><b>Whitney K. Newcomb</b></h4>
   </div>
-  <a href="index.html" class="w3-padding w3-text-teal">Home</a>
+  <a href="index.html" class="w3-padding">Home</a>
   <a href="Resume_CV.html" class="w3-padding">Resume and CV</a>
   <a href="Cartography.html" class="w3-padding">Cartogaphy</a>
   <a href="Web_Mapping.html" class="w3-padding">Web Mapping</a>
-  <a href="Contact.html" class="w3-padding">Contact</a>
-   
-  <div class="w3-section w3-padding-top w3-large">
-    <a href="https://www.facebook.com/Whittaytay" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-facebook-official"></i></a>
-    <a href="https://www.linkedin.com/in/whitney-newcomb-1765069b" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-linkedin"></i></a>
-  </div>
-</nav>
+  <a href="Contact.html" class="w3-padding">Contact</a></nav>
 
 <!-- Overlay effect when opening sidenav on small screens -->
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
@@ -55,44 +49,14 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	  centuries and is evolving in ways we never thought imaginable. <br>
 	  Dynamic Web Mapping is establishing itself in the Spatial Data World and it's not going anywhere.
 	  Please see what I have been able to create through dynamic web mapping and programming.
-	  <br>
-	  ...
+	  <br><br>
+	  Please use the following link to a web mapping project I did for an Advanced GIS course: <a href="http://gsp.humboldt.edu/projects/2016_GSP470/EelRiver/ER_Home_S.html">Salmon of the Eel River</a>
 </h5>
     </div>
   </div>
 </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-32 w3-white">
-  <div class="w3-row-padding">
-    <div class="w3-third">
-      <h3>Thank you</h3>
-      <p>for visiting my website. </p>
-      <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-    </div>
-  
-    <div class="w3-third">
-      <h3>In Development</h3>
-      <ul class="w3-ul w3-hoverable">
-        <li class="w3-padding-16">
-          <span class="w3-large">UAV's </span><br>
-          <span>I am currently in progress to attain my Private Pilot's Knowledge Certificate (I have now earned my second class medical certificate!)</span>
-        </li>
-        <li class="w3-padding-16">
-          <span class="w3-large">GSP Club</span><br>
-          <span>Watch your emails for the day and time of the first meeting of the semester.</span>
-        </li>
-      </ul>
-    </div>
-
-    <div class="w3-third">
-      <h3></h3>
-      <p></p>
-    </div>
-
-  </div>
-  </footer>
-
 <!-- End page content -->
 </div>
 
