--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
 </style>
+<link href="myw3.css" rel="stylesheet" type="text/css">
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- Sidenav/menu -->
@@ -23,17 +24,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="Images/Selfy.jpg" style="width:45%;"><br><br>
     <h4 class="w3-padding-0"><b>Miss Whitney K. Newcomb</b></h4>
   </div>
-  <a href="/index.html" class="w3-padding w3-text-teal">Home</a>
-  <a href="/Resume_CV.html" class="w3-padding">Resume and CV</a>
-  <a href="/Cartography.html" class="w3-padding">Cartogaphy</a>
-  <a href="/Web_Mapping.html" class="w3-padding">Web Mapping</a>
-  <a href="/Contact.html" class="w3-padding">Contact</a>
-   
-  <div class="w3-section w3-padding-top w3-large">
-    <a href="https://www.facebook.com/Whittaytay" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-facebook-official"></i></a>
-    <a href="https://www.linkedin.com/in/whitney-newcomb-1765069b" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-linkedin"></i></a>
-  </div>
-</nav>
+  <a href="index.html" class="w3-padding">Home</a>
+  <a href="Resume_CV.html" class="w3-padding">Resume and CV</a>
+  <a href="Cartography.html" class="w3-padding">Cartogaphy</a>
+  <a href="Web_Mapping.html" class="w3-padding">Web Mapping</a>
+  <a href="Contact.html" class="w3-padding">Contact</a></nav>
 
 <!-- Overlay effect when opening sidenav on small screens -->
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
@@ -50,7 +45,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   </header>
   
- <div class="w3-row-padding w3-padding-64 w3-container" style="background-image:url(Images/EelRiv.jpg); background-repeat: no-repeat; background-position: left top; background-attachment: fixed;">
+ <div class="w3-row-padding w3-padding-64 w3-container" style="background-image:url(Images/EelRiv.jpg);no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;">
   <div class="w3-content" >
     <div class="w3-twothird" style="background-color: #ffffff;border: 1px solid black;opacity: 0.6;filter: alpha(opacity=70);padding:10px">
       <h1>A little bit about myself...</h1>
@@ -71,34 +70,6 @@ Thank you for taking the time to view my site.
 </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-32 w3-white">
-  <div class="w3-row-padding">
-    <div class="w3-third">
-      <h3>Thank you</h3>
-      <p>for visiting my website. </p>
-    </div>
-<div class="w3-third">
-  <h3>In Development</h3>
-      <ul class="w3-ul w3-hoverable">
-        <li class="w3-padding-16">
-          <span class="w3-large">UAV's </span><br>
-          <span>I am currently in progress to attain my Private Pilot's Knowledge Certificate (I have now earned my second class medical certificate!)</span>
-        </li>
-        <li class="w3-padding-16">
-          <span class="w3-large">GSP Club</span><br>
-          <span>Watch your emails for the day and time of the first meeting of the semester.</span>
-        </li>
-      </ul>
-</div>
-
-    <div class="w3-third">
-      <h3></h3>
-      <p></p>
-    </div>
-
-  </div>
-  </footer>
-
 <!-- End page content -->
 </div>
 
