--- a/Cartography.html
+++ b/Cartography.html
@@ -2,7 +2,7 @@
 <html>
 <title>Cartographic Design by Whitney K. Newcomb</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="myw3.css" rel="stylesheet" type="text/css">
+<link href="/myw3.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="GoogleFontsAPI.css" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <style>
