--- a/Cartography.html
+++ b/Cartography.html
@@ -6,7 +6,7 @@
 <!--<link rel="stylesheet" href="GoogleFontsAPI.css" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> -->
 <style>
-html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
