--- a/Cartography.html
+++ b/Cartography.html
@@ -3,8 +3,8 @@
 <title>Cartographic Design by Whitney K. Newcomb</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="/myw3.css" rel="stylesheet" type="text/css">
-<!--<link rel="stylesheet" href="GoogleFontsAPI.css" type="text/css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> -->
+<!--<link rel="stylesheet" href="GoogleFontsAPI.css" type="text/css"> -->
+<link rel="stylesheet" href="/AwesomeFonts.css"> 
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
