--- a/Cartography.html
+++ b/Cartography.html
@@ -82,7 +82,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
 							-->
 							<article class="6u 12u$(xsmall) work-item">
 							  <h3>Present Range of the Giant Sequoia</h3>
-							  <a href="images/fulls/GiantSequoia.jpg" class="image fit thumb"><img src="images/thumbs/GiantSequoia.jpg" alt="Giant Sequoia Range in California Map" /></a>
+							  <a href="/Images/fulls/GiantSequoia.jpg" class="image fit thumb"><img src="images/thumbs/GiantSequoia.jpg" alt="Giant Sequoia Range in California Map" /></a>
 							  <h4>Cartography Practicum</h4>
 							  <p>This map was developed for print and will eventually be published in a book by Dr. Stephen Cunha on the history of the Sierra Nevada in California. Completed in December 2016. <a href="images/fulls/GiantSequoia.jpg" download><br>Download Image</a>
 								</p>
@@ -91,9 +91,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
 							
 							<article class="6u 12u$(xsmall) work-item">
 							  <h3>Madagascar</h3>
-							  <a href="images/fulls/Madagascar.jpg" class="image fit thumb"><img src="images/thumbs/Madagascar.jpg" alt="Madagascar Map" /></a>
+							  <a href="images/fulls/Madagascar.jpg" class="image fit thumb"><img src="/Images/thumbs/Madagascar.jpg" alt="Madagascar Map" /></a>
 							  <h4>Cartography Course</h4>
-							  <p>The island of Madagascar is depicted in this assignment for my cartography course at HSU. Completed in Spring 2016. <a href="images/fulls/Madagascar.jpg" download><br>Download Image</a>
+							  <p>The island of Madagascar is depicted in this assignment for my cartography course at HSU. Completed in Spring 2016. <a href="/Images/fulls/Madagascar.jpg" download><br>Download Image</a>
 								</p>
 							</article>
 							
