--- a/Contact.html
+++ b/Contact.html
@@ -20,10 +20,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="Images/Selfy.jpg" style="width:45%;" class="w3-round"><br><br>
     <h4 class="w3-padding-0"><b>Whitney K. Newcomb</b></h4>
   </div>
-  <a href="/index.html" class="w3-padding">Home</a>
-  <a href="/Resume_CV.html" class="w3-padding">Resume and CV</a>
-  <a href="/Cartography.html" class="w3-padding">Cartogaphy</a>
-  <a href="/Contact.html" class="w3-padding w3-text-teal">Contact</a></nav>
+  <a href="index.html" class="w3-padding">Home</a>
+  <a href="Resume_CV.html" class="w3-padding">Resume and CV</a>
+  <a href="Cartography.html" class="w3-padding">Cartogaphy</a>
+  <a href="Contact.html" class="w3-padding w3-text-teal">Contact</a></nav>
 
 <!-- Overlay effect when opening sidenav on small screens -->
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
