--- a/Cartography.html
+++ b/Cartography.html
@@ -20,10 +20,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
     <img src="Images/Selfy.jpg" style="width:45%;" class="w3-round"><br><br>
     <h4 class="w3-padding-0"><b>Whitney K. Newcomb</b></h4>
   </div>
-  <a href="/index.html" class="w3-padding">Home</a>
-  <a href="/Resume_CV.html" class="w3-padding">Resume and CV</a>
-  <a href="/Cartography.html" class="w3-padding w3-text-teal">Cartography</a>
-  <a href="/Contact.html" class="w3-padding">Contact</a>
+  <a href="index.html" class="w3-padding">Home</a>
+  <a href="Resume_CV.html" class="w3-padding">Resume and CV</a>
+  <a href="Cartography.html" class="w3-padding w3-text-teal">Cartography</a>
+  <a href="Contact.html" class="w3-padding">Contact</a>
    
 
 </nav>
