--- a/Cartography.html
+++ b/Cartography.html
@@ -4,7 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="myw3.css" rel="stylesheet" type="text/css">
 <!--<link rel="stylesheet" href="GoogleFontsAPI.css" type="text/css"> -->
-<link rel="stylesheet" href="/AwesomeFonts.css"> 
+<link rel="stylesheet" href="/AwesomeFonts.css">
+<link rel="stylesheet" href="assets/css/main.css" />
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
