--- a/Cartography.html
+++ b/Cartography.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-<title>Cartographic Design by Whitney K. Newcomb</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="myw3.css" rel="stylesheet" type="text/css">
-
-<link rel="stylesheet" href="assets/css/main.css" />
-<style>
-html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
-.w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
-</style>
+	<head>
+	<title>Cartographic Design by Whitney K. Newcomb</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="myw3.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/main.css" rel="stylesheet" />
+		<style>
+		html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
+		.w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
+		</style>
+	</head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- Sidenav/menu -->
