--- a/Cartography.html
+++ b/Cartography.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="myw3.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/main.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 		<style>
 		html,body,h1,h2,h3,h4,h5 {font-family: "Times New Roman", sans-serif}
 		.w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
