--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -3,6 +3,7 @@
 <title>Resume and CV of Whitney K. Newcomb</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="myw3.css" rel="stylesheet" type="text/css">
+<link href="assets/css/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <style>
