--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
 
-
+<link href="assets/css/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <style>
