--- a/Contact.html
+++ b/Contact.html
@@ -46,9 +46,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h1>Do ya wanna get ahold of me? Here's how!</h1>
       <h5 class="w3-padding-32">
 	  <h6>Name:</h6>Whitney Kelsey Newcomb
-	  <h6>Address: </h6>1139 12th St. Arcata Ca, 95521
+	  <h6>Address: </h6>1139 12th St. #7 Arcata Ca, 95521
 	  <h6>Phone: </h6> 760.819.2680
-	  <h6>Email: </h6> wkn9@humboldt.edu
+	  <h6>Email: </h6> WhitneyKNewcomb@gmail.com
 	  
 </h5>
      <div class="w3-section w3-padding-top w3-large">
