--- a/Resume_CV1.html
+++ b/Resume_CV1.html
@@ -12,17 +12,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
 </style>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="jQueryAssets/jquery.ui.core.min.css" rel="stylesheet" type="text/css">
-<link href="jQueryAssets/jquery.ui.theme.min.css" rel="stylesheet" type="text/css">
-<link href="jQueryAssets/jquery.ui.accordion.min.css" rel="stylesheet" type="text/css">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-<script src="jQueryAssets/jquery-1.11.1.min.js"></script>
-<script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
 </head>
 
 <body class="w3-light-grey w3-content" style="max-width:1600px">
@@ -61,21 +56,33 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-twothird">
  
 <!-- start accordion -->
-  
-<div id="Accordion1">
-  <h3><a href="#">Section 1</a></h3>
-  <div>
-    <p>Content 1</p>
+<div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab">
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1">Education</a></h4>
+    </div>
+    <div id="collapseOne1" class="panel-collapse collapse in">
+      <div class="panel-body">HSU Blah Blah Blah Test</div>
+    </div>
   </div>
-  <h3><a href="#">Section 2</a></h3>
-  <div>
-    <p>Content 2</p>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo1">Work Experience</a></h4>
+    </div>
+    <div id="collapseTwo1" class="panel-collapse collapse">
+      <div class="panel-body">Content for Accordion Panel 2</div>
+    </div>
   </div>
-  <h3><a href="#">Section 3</a></h3>
-  <div>
-    <p>Content 3</p>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree1">GIS Research Experience</a></h4>
+    </div>
+    <div id="collapseThree1" class="panel-collapse collapse">
+      <div class="panel-body">Papers Blah Blah</div>
+    </div>
   </div>
 </div>
+
 <!-- End accordion -->
 </div>
 </div>
