work on resume and cv accordion

--- a/Resume_CV1.html
+++ b/Resume_CV1.html
@@ -58,14 +58,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <!-- start accordion -->
 <div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
-    <div class="panel-heading" role="tab">
+<div class="panel-heading" role="tab">
       <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1">Education</a></h4>
     </div>
     <div id="collapseOne1" class="panel-collapse collapse in">
       <div class="panel-body">HSU Blah Blah Blah Test</div>
+      <div class="panel-body">HSU Blah Blah Blah Test</div>
     </div>
-  </div>
-  <div class="panel panel-default">
+  
+<div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo1">Work Experience</a></h4>
     </div>
@@ -73,7 +74,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="panel-body">Content for Accordion Panel 2</div>
     </div>
   </div>
-  <div class="panel panel-default">
+<div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree1">GIS Research Experience</a></h4>
     </div>
@@ -81,17 +82,49 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="panel-body">Papers Blah Blah</div>
     </div>
   </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseFour1">Skills and Abilities</a></h4>
+    </div>
+    <div id="collapseFour1" class="panel-collapse collapse">
+      <div class="panel-body">Papers Blah Blah</div>
+    </div>
+  </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseFive2">Extracurricular</a></h4>
+    </div>
+    <div id="collapseFive2" class="panel-collapse collapse">
+      <div class="panel-body">Papers Blah Blah</div>
+    </div>
+  </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseSix2">Honors and Awards</a></h4>
+    </div>
+    <div id="collapseSix2" class="panel-collapse collapse">
+      <div class="panel-body">Papers Blah Blah</div>
+    </div>
+  </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseSeven2">References</a></h4>
+    </div>
+    <div id="collapseSeven2" class="panel-collapse collapse">
+      <div class="panel-body">Papers Blah Blah</div>
+    </div>
+  </div>
+  
 </div>
-
+</div>
 <!-- End accordion -->
 </div>
 </div>
-</div>
-
+</div> 
   
 <!-- Footer -->
 <!-- End page content -->
-</div>
+
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script>
