http to https on w3

--- a/Cartography.html
+++ b/Cartography.html
@@ -3,7 +3,7 @@
 <head>
 <title>The Portfolio of Whitney K. Newcomb</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="assets/css/main.css" />
 
