--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -28,7 +28,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="Images/Selfy.jpg" style="width:45%;" class="w3-round"><br><br>
+    <img src="Images/GradPic.jpg" style="width:45%;" class="w3-round"><br><br>
     <h4 class="w3-padding-0"><b>Whitney K. Newcomb</b></h4>
   </div>
   <a href="index.html" class="w3-padding">Home</a>
@@ -45,7 +45,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   <!-- Header -->
   <header class="w3-container">
-    <a href="#"><img src="Images/Selfy.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
+    <a href="#"><img src="Images/GradPic.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-opennav w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <h1><strong>My Experience and Skills</strong></h1>
 
