--- a/Contact.html
+++ b/Contact.html
@@ -43,7 +43,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
  <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Do ya wanna get ahold of me? Here's how!</h1>
+      <h1>Do ya wanna get ahold of me? <br> Here's how!</h1>
       <h5 class="w3-padding-32">
 	  <h6>Name:</h6>Whitney Kelsey Newcomb
 	  <h6>Address: </h6>1139 12th St. #7 Arcata Ca, 95521
