--- a/Cartography.html
+++ b/Cartography.html
@@ -122,6 +122,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 								<p>The Many Beautiful Murals of Balmey Alley - Mission District, San Franscisco California 
 									<br> This interacive map may not display in Internet Explorer.</p>
 							</article>
+							
+							<article class="pictureboxes">
+								<iframe width="785" height="500" src="http://gis.humboldt.edu/projects/2016_GSP470/EelRiver/ER_Home_S.html"></iframe>
+								<h3>Eel River and Salmon Website</h3>
+								<p>This website was created for my Advanced GIS Course and contains 2 webmaps. Please feel free to follow this link and explore this website. 
+									<br> Click <a src="http://gis.humboldt.edu/projects/2016_GSP470/EelRiver/ER_Home_S.html" class="w3-padding">HERE</a> to visit this stand alone website.</p>
+							</article>
 
 						
 						<h2>Maps finished in ESRI's ArcMap</h2>
