--- a/Contact.html
+++ b/Contact.html
@@ -49,11 +49,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	  <h6>Address: </h6>1139 12th St. #7 Arcata Ca, 95521
 	  <h6>Phone: </h6> 760.819.2680
 	  <h6>Email: </h6> WhitneyKNewcomb@gmail.com
-	  
-</h5>
-     <div class="w3-section w3-padding-top w3-large">
-    <a href="https://www.linkedin.com/in/whitney-newcomb-1765069b" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-linkedin"></i></a>
-  </div>
+	  <h6> LinkedIn:     <a href="https://www.linkedin.com/in/whitney-newcomb-1765069b" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block w3-large"><i class="fa fa-linkedin"></i></a> </h6>
+	    	
     </div>
   </div>
 </div>
