--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -51,7 +51,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   </header>
 
-<div class="w3-row-padding w3-padding-64 w3-container" style="text-align: center">
+<div class="w3-row-padding w3-padding-64 w3-container" style="text-align: left">
 <div class="w3-content">
 <div class="w3-twothird">
  
