trying to fix eel river

--- a/Cartography.html
+++ b/Cartography.html
@@ -126,7 +126,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 							</article>
 							
 							<article class="pictureboxes">
-								<iframe width="785" height="500" src="http://gis.humboldt.edu/projects/2016_GSP470/EelRiver/ER_Home_S.html"></iframe>
+								<iframe width="785" height="500" src="https://gis.humboldt.edu/projects/2016_GSP470/EelRiver/ER_Home_S.html"></iframe>
 								<h3>Eel River and Salmon Website</h3>
 								<p>This website was created for my Advanced GIS Course and contains 2 webmaps. Please feel free to follow this link and explore this website. 
 									<br> Click <a href="http://gis.humboldt.edu/projects/2016_GSP470/EelRiver/ER_Home_S.html" class="w3-padding">HERE</a> to visit this stand alone website.</p>
