--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -55,6 +55,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-content">
 <div class="w3-twothird">
  
+ <div><p> If you would like to download my resume click <a href="Whitney_Newcomb_Resume.pdf" download>HERE.</a></p></div>
 <!-- start accordion -->
 <div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
