Updates to resume
Coming soon on Cart, Added some small stuff to index, added WC
internship to resume page

--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -76,6 +76,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     
     <div id="collapseTwo1" class="panel-collapse collapse">
+      <div class="panel-body"><p><b>GIS Intern </b></p>
+      	<p>City of Walnut Creek GIS Department | Walnut Creek, CA</p>
+      	<p>July 2017 - present</p>
+      	<p>Updated the city's Master address database (In progress). Created information map for the newly appointed City Manager. Created web applications for public art (In progress). Studied and implemented best practices for project management in GIS. </p>
+      </div>
       <div class="panel-body"><p><b>GIS Assistant (Internship) </b></p>
       	<p>City of Eureka Planning Department | Eureka, CA</p>
       	<p>December 2016 – May 2017</p>
