--- a/Cartography.html
+++ b/Cartography.html
@@ -51,6 +51,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-twothird">
 <h3 style="text-align: left"> If a picture is worth a 1000 words than a map is worth so much more.</h3>
 <h4 style="text-align: left"> The following maps are seperated by how they were made: Using Adobe Illutrator, JavaScript, or Esri ArcMap.</h4>
+<br> <h4 style="text-align: center"> <b>MORE COMING SOON!</b></h4>
  
  <section id="two">
 						<h2>Maps finished in Adobe Illustrator</h2>
