--- a/index.html
+++ b/index.html
@@ -54,17 +54,20 @@ Hello and welcome to my portfolio website that I have created using a combinatio
 <p>After high school I went directly to Humboldt State University (HSU) as a first generation college student. I switched majors a few times before I finally found the Geospatial Science option of the Environmental Science major and there I fell in love with all things geospatial. </p>
 <p>I graduated HSU in May 2017 as the Outstanding Student for my major option with the highest honors. I completed my B.S. in 4 years which only 11% of students in the major accomplish. I had internships for those 3 summers and a final internship during my last semester. I helped bring back the Geospatial Club where I helped put together 2 very successful GIS Days and held the officers position of Secretary and Vice-President. </p>
 <p> <b>At HSU the most important thing I learned is that to get anything done in this chaotic and often messed up world it takes a lot of really smart people working really hard for a long time. One person can do very little – the power and usefulness of teamwork and synergy is what gets things done. </b></p>
+	<p> I am currently working as a GIS Intern for the City of Walnut Creek. I am updating the city's Master Address Database, creating web applications, making maps, and learning lots!</p>
 	<p>I am a life-long learned and I am currently studying: </p>
 	<ul>
 		<li>SQL and databases sciences</li>
 		<li>AutoCAD</li>
+		<li>Project Management</li>
  	</ul>
 	<p>I am interested in:</p>
 	<ul>
 		<li>Data collection through the use of Unmanned Aerial Vehicles (UAVs or drones)</li>
 		<li>Cartographic design</li>
 		<li>Working with large geospatial datasets</li>
-		<li>Helping solve real world problems through the use of GIS</li>		
+		<li>Helping solve real world problems through the use of GIS</li>	
+		<li>Cartography for the web</li>	
 	</ul>
 
 	<p> I enjoy: </p>	
