Added to Cart, and resume.cv

--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -135,8 +135,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <div id="collapseFour1" class="panel-collapse collapse">
       <div class="panel-body"><p><b>Software Experience</b></p>
-		  	<p>ArcMap 10.2, 10.4, 10.5 (3 years), ArcGIS Online, Arc Collector, ArcScene, QGIS, ENVI </p>
-			<p>Microsoft Office Suite (Word, PowerPoint, Excel), Adobe Acrobat, Dreamweaver, Illustrator, Photoshop</p>
+		  	<p>ArcMap 10.2, 10.4, 10.5, & Pro (3 years), ArcGIS Online, Arc Collector, ArcScene, QGIS, ENVI </p>
+			<p>Microsoft Office Suite (Word, PowerPoint, Excel), Adobe Acrobat, Dreamweaver, Illustrator, Photoshop, Premiere Pro</p>
 			<p>Google Products (Google Earth Pro, Sketch Up Pro, Docs, Sheets, Slides, Drive)</p>
 			<p>Trimble TeraSync, GSP Pathfinder Office, Garmin Express, Mission Planner</p>
       </div>
@@ -148,7 +148,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
       
       <div class="panel-body"><p><b>Programming Experience</b></p>
-      		<p>Python (1.5 year)</p>
+      		<p>Python (2 years)</p>
       		<p>HTML5, JavaScript, CSS (1.5 year)</p>
       		<p>Leaflet (1 year)</p>
       		<p>R (6 months)</p>
@@ -180,9 +180,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   
 <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseFive2">Extracurricular</a></h4>
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseFive2">Memberships and Extracurricular</a></h4>
     </div>
     <div id="collapseFive2" class="panel-collapse collapse">
+	  <div class="panel-body"><p><b>BayGeo Member</b></p>
+     	 <p>2018 - present</p>
+      </div>
+	  <div class="panel-body"><p><b>Society for Conservation GIS, San Fransisco Chapter (Volunteer)</b></p>
+     	 <p>2018 - present</p>
+      </div>
       <div class="panel-body"><p><b>HSU Geospatial Club</b></p>
       	<p>2014 - 2017 | Offices Held: Vice President and Secretary</p>
       	<p>Took minutes at all club meetings, planned and implemented GIS Day 2015 & 2016, Tutored drop in homework help sessions, Planned trail mapping and Geocaching events.</p>
@@ -220,6 +226,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="panel-body"><p><b>James Graham, PhD</b></p>
       <p>Environmental Science and Management Department</p><p>Humboldt State University</p><p>Arcata, CA 95521</p><p>(707) 826-3823</p><p>James.graham@humboldt.edu</p>
       </div>
+	  
+      <div class="panel-body"><p><b>Phil Beilin</b></p>
+      <p>GIS Coordinator</p><p>IT Division, City of Walnut Creek</p><p>Walnut Creek, CA 94596</p><p>(925)256-3544</p><p>pbeilin9@walnut-creek.org</p>
+      </div>	  
       
       <div class="panel-body"><p><b>Betsy Lindsay</b></p>
       <p>President/CEO</p><p>Ultrasystems Environmental Inc. </p><p>Irvine, CA 92618</p><p>(949) 274-3935</p><p>Blindsay@ultrasystems.com</p>
