arcara to arcata

--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -88,7 +88,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
       
       <div class="panel-body"><p><b>Geospatial Tutor (Instructional Student Assistant)</b></p>
-      	<p>HSU’s Natural Resources Department | Arcara, CA</p>
+      	<p>HSU’s Natural Resources Department | Arcata, CA</p>
       	<p>August 2016 – May 2017</p>
       	<p>Assisted students during scheduled open lab times in the GIS/remote sensing labs with various geospatial course work that included GIS lab assignments and projects, remote sensing lab assignments and projects, python geospatial programming, geospatial web development, and mobile mapping techniques. Provided problem-solving techniques to students requesting help.  </p>
       </div>    
