Adding Writing Downloads

--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -121,11 +121,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     
     <div id="collapseThree1" class="panel-collapse collapse">
-      <div class="panel-body">“Sea Level Rise and Inundation Mapping Analysis of Highway 101 around Humboldt Bay” Academic Paper for 	Environmental Science Capstone Course, 2017.</div>
+      <div class="panel-body">“Sea Level Rise and Inundation Mapping Analysis of Highway 101 around Humboldt Bay” Academic Paper for 	Environmental Science Capstone Course, 2017. <a href="Downloads/ENVS411_SLR_Final_Report.pdf" download="WhitneyNewcomb_SeaLevelRise_HWY101">*Download</a></div>
       <div class="panel-body">“Mapping Bark Beetle Infestation in the Rocky Mountain National Park from 2014-2016”, Academic Paper for 	Intermediate Remote Sensing Course Final Project, 2016. <a href="Downloads/GSP326-ProjectReport.docx" download="WhitneyNewcomb_BarkBeetlesRockyMtns">*Download</a> </div>
-      <div class="panel-body">“Vegetation Mapping of the Ma-le’l Dunes”, Academic Paper for Mobile Mapping Final Project, 2016.</div>
-      <div class="panel-body">“Land Cover Change in Coachella Valley, California over the Last 20 Years” Academic Paper for Introduction to 	Remote Sensing Course Final Project, 2015.</div>
-      <div class="panel-body">“Preparation of High Spatial and Temporal Resolution Data from UAS Sources for GIS Applications” Academic Paper 	and Poster Presentation for Intermediate GIS Course Project, 2015.</div>
+      <div class="panel-body">“Vegetation Mapping of the Ma-le’l Dunes”, Academic Paper for Mobile Mapping Final Project, 2016. <a href="Downloads/GSP330Report.docx" download="WhitneyNewcomb_VegetationMapping">*Download</a></div>
+      <div class="panel-body">“Land Cover Change in Coachella Valley, California over the Last 20 Years” Academic Paper for Introduction to 	Remote Sensing Course Final Project, 2015. <a href="Downloads/IntroRS_WNewcomb.docx" download="WhitneyNewcomb_VegetationChangeCoachellaValley">*Download</a></div>
+      <div class="panel-body">“Preparation of High Spatial and Temporal Resolution Data from UAS Sources for GIS Applications” Academic Paper 	and Poster Presentation for Intermediate GIS Course Project, 2015. <a href="Downloads/UAVFinalPoster.pdf" download="WhitneyNewcomb_UAV_Poster">*Download Poter (Paper not available for download at this time)</a></div>
       <div class="panel-body">“Marbled Murrelets Habitat Study of Humboldt County” Academic Paper for Introduction to GIS Course Final 	Project, 2014.</div>           
     </div>
 
