updated CoWC section

--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -80,7 +80,18 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="panel-body"><p><b>GIS Intern </b></p>
       	<p>City of Walnut Creek GIS Department | Walnut Creek, CA</p>
       	<p>July 2017 - present</p>
-      	<p>Updated the city's Master address database (In progress). Created information map for the newly appointed City Manager. Created web applications for public art (In progress). Studied and implemented best practices for project management in GIS. </p>
+	    <p> <ul>
+		<li>Updated and maintained the city’s Master Address Database by processing new address paperwork, and by identifying and resolving addresses with errors; processed approx. 5000 addresses. </li>
+		<li>Created several maps for print: City Map for new City Manager, CERT workshop maps, and others. </li>
+		<li>Created a web application for the city’s public art through Esri’s Web App Builder- Developer’s Interface. Created a suite of ArcGIS Online apps for natural disaster and emergency response. </li>
+		<li>Used spatial analysis to identify potential “Soft-Story” buildings and created a risk index for said buildings. </li>
+		<li>Automated the city’s acclimation of parcel data from the county and other processes involving parcel data using Python programming. </li>
+		<li>Gained project management skills by using Six Sigma practices in team work oriented projects.
+		<li>Gained experience with geodatabase design, especially regarding Esri’s Local Government Information Model where I updated and edited features and attributes. </li>
+		<li>Used the Collector app to collect address and light pole location data in the city. </li>
+	        <li>Met regularily with GIS staff to teach and demonstrate my skills and knowledge of Web AppBuilder Developer's Edition, creation of complex ArcGIS Online Web Mapping Applications, and Python.</li>
+	    </ul></p>
+
       </div>
       <div class="panel-body"><p><b>GIS Assistant (Internship) </b></p>
       	<p>City of Eureka Planning Department | Eureka, CA</p>
