updated public art walnut creek

--- a/Cartography.html
+++ b/Cartography.html
@@ -115,8 +115,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 						<h2>Web Maps</h2>
 							<article class="pictureboxes">
 								<h3>Public Art in Walnut Creek</h3>
-								<p>This map is still in production and you won't find access to it anywhere else! More to come on this map app later.
-								Created with Esri's Web App Builder.</p>
+								<p>This ArcGIS Online Web Mapping Application was created using Esri's Web AppBuilder Developer's Edition. A huge thanks to Bedford Gallery and Walnut CreekDowntown for all of their help and support along the way.</p>
 								<p> Click <a href="http://gis.walnut-creek.org/PublicArtWalnutCreek/index.html" class="w3-padding">HERE</a> to visit this stand alone website.</p>								
 							</article>
 							
