updated public art link again

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-content">
 <div class="w3-twothird">
 	<p><b>
-		NEW! The <a href="<a href="https://gis.walnut-creek.org/PublicArtWalnutCreek/index.html">City of Walnut Creek Public Art Web Map</a> is now live! 
+		NEW! The <a href="https://gis.walnut-creek.org/PublicArtWalnutCreek/index.html">City of Walnut Creek Public Art Web Map</a> is now live! 
 	</b></p>
 <p>
 Hello and welcome to my portfolio website that I have created using a combination of HTML5, CSS, JavaScript, and GitHub’s servers.</p> 
