--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -89,7 +89,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 		<li>Gained project management skills by using Six Sigma practices in team work oriented projects.
 		<li>Gained experience with geodatabase design, especially regarding Esri’s Local Government Information Model where I updated and edited features and attributes. </li>
 		<li>Used the Collector app to collect address and light pole location data in the city. </li>
-	        <li>Met regularily with GIS staff to teach and demonstrate my skills and knowledge of Web AppBuilder Developer's Edition, creation of complex ArcGIS Online Web Mapping Applications, and Python.</li>
+	        <li>Met regularly with GIS staff to teach and demonstrate my skills and knowledge of Web AppBuilder Developer's Edition, creation of complex ArcGIS Online Web Mapping Applications, and Python.</li>
 	    </ul></p>
 
       </div>
