--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-content">
 <div class="w3-twothird">
  
-<div><p> If you would like to download my resume click <a href="Whitney_Newcomb_Resume.pdf" download>HERE.</a></p></div>
+<div><p> If you would like to download my resume click <a href="Whitney_Newcomb_Resume.docx" download>HERE.</a></p></div>
 <div><p>* Paper available for download. </p></div>
 <!-- start accordion -->
 <div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
@@ -67,7 +67,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div id="collapseOne1" class="panel-collapse collapse in">
 		<div class="panel-body"><p><b>B.S. of Environmental Science</b> with a concentration in <b>Geospatial Analysis</b></p>
      		<p>Humboldt State University (HSU), Arcata CA</p>
-     		<p>May 2017 | GPA: 3.89</p>
+     		<p>May 2017 | Summa Cum Laude </p>
      	</div>
     </div>
   
@@ -77,9 +77,18 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     
     <div id="collapseTwo1" class="panel-collapse collapse">
+      <div class="panel-body"><p><b>GIS Technician </b></p>
+      	<p>City of Concord GIS Department | Concord, CA</p>
+      	<p>April 2018 - present</p>
+	    <p> 
+		Updated the city’s address database within the Local Government Information Model SDE geodatabase in preparation for the LUCA Project for the 2020 Census.
+		Temporary position.
+		</p>
+
+      </div>
       <div class="panel-body"><p><b>GIS Intern </b></p>
       	<p>City of Walnut Creek GIS Department | Walnut Creek, CA</p>
-      	<p>July 2017 - present</p>
+      	<p>July 2017 - March 2018</p>
 	    <p> <ul>
 		<li>Updated and maintained the city’s Master Address Database by processing new address paperwork, and by identifying and resolving addresses with errors; processed approx. 5000 addresses. </li>
 		<li>Created several maps for print: City Map for new City Manager, CERT workshop maps, and others. </li>
