--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Contact Whitney K. Newcomb</title>
+<title>Contact Whitney K. Anderson</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="myw3.css" rel="stylesheet" type="text/css">
 <link href="assets/css/main.css" rel="stylesheet" />
@@ -19,7 +19,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <i class="fa fa-remove"></i>
     </a>
     <img src="Images/GradPic.jpg" style="width:45%;" class="w3-round"><br><br>
-    <h4 class="w3-padding-0"><b>Whitney K. Newcomb</b></h4>
+    <h4 class="w3-padding-0"><b>Whitney K. Anderson</b></h4>
   </div>
   <a href="index.html" class="w3-padding">Home</a>
   <a href="Resume_CV.html" class="w3-padding">Resume and CV</a>
@@ -45,8 +45,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-twothird">
       <h1>Do ya wanna get ahold of me? <br> Here's how!</h1>
       <h5 class="w3-padding-32">
-	  <h6>Name:</h6>Whitney Kelsey Newcomb
-	  <h6>Address: </h6>1200 Alpine Rd. Apt XX, Walnut Creek, CA 94596
+	  <h6>Name:</h6>Whitney Kelsey Anderson
+	  <h6>Address: </h6>4990 Owens Dr. Pleasanton, CA 94588
 	  <h6>Phone: </h6> (760)819.2680
 	  <h6>Email: </h6> WhitneyKNewcomb@gmail.com
 	  <h6> LinkedIn:     <a href="https://www.linkedin.com/in/whitney-newcomb-1765069b" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block w3-large"><i class="fa fa-linkedin"></i></a> </h6>
