--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>The Portfolio of Whitney K. Newcomb</title>
+<title>The Portfolio of Whitney K. Anderson</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -29,7 +29,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <i class="fa fa-remove"></i>
     </a>
     <img src="Images/GradPic.jpg" style="width:45%;" class="w3-round"><br><br>
-    <h4 class="w3-padding-0"><b>Whitney K. Newcomb</b></h4>
+    <h4 class="w3-padding-0"><b>Whitney K. Anderson</b></h4>
   </div>
   <a href="index.html" class="w3-padding">Home</a>
   <a href="Resume_CV.html" class="w3-padding w3-text-teal">Resume and CV</a>
@@ -61,15 +61,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
   
-<div class="panel-heading" role="tab">
-      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1">Education</a></h4>
-</div>
-    <div id="collapseOne1" class="panel-collapse collapse in">
-		<div class="panel-body"><p><b>B.S. of Environmental Science</b> with a concentration in <b>Geospatial Analysis</b></p>
-     		<p>Humboldt State University (HSU), Arcata CA</p>
-     		<p>May 2017 | Summa Cum Laude </p>
-     	</div>
-    </div>
+
   
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -132,7 +124,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       	<p>Responsibilities included: organization, editing, and creation of databases for project descriptions, acted as a receptionist, involved in staff meetings, ordered, restocked, and organized office supplies, and managed employee time sheets. Gained rudimentary knowledge of CEQA and NEPA compliance. Assisted with the creation and delivery of proposals, assisted archaeologists, biologists, GIS analysists, and engineers to complete tasks. </p>
       </div>         
     </div>
-    
+<div class="panel-heading" role="tab">
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1">Education</a></h4>
+</div>
+    <div id="collapseOne1" class="panel-collapse collapse in">
+		<div class="panel-body"><p><b>B.S. of Environmental Science</b> with a concentration in <b>Geospatial Analysis</b></p>
+     		<p>Humboldt State University (HSU), Arcata CA</p>
+     		<p>May 2017 | Summa Cum Laude </p>
+     	</div>
+    </div>    
     
 </div>
 <div class="panel panel-default">
