--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -75,7 +75,17 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="panel-heading">
       <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo1">Work Experience</a></h4>
     </div>
-    
+
+    <div id="collapseTwo1" class="panel-collapse collapse">
+      <div class="panel-body"><p><b>Sr. GIS Cartographer & IT Assistant </b></p>
+      	<p>Lettis Consultants International Inc. | Concord, CA</p>
+      	<p>May 2018 - present</p>
+	    <p> 
+		Provided GIS and IT support to geologists, seismologists, and engineers for a variety of geotechnical and seismic hazard projects, pertaining to critical hydrology infrastructure, nuclear infrastructure, seismic hazard analysis and landslide studies. Duties included capturing and processing UAV imagery, creating maps for field work, digitizing and synthesizing field data and historical and modern engineering drawings into finished cartographic products as both 2D and 3D visualizations, performing a variety of raster and vector spatial analysis, and managing data for multiple projects simultaneously.
+		</p>
+
+      </div>	
+	
     <div id="collapseTwo1" class="panel-collapse collapse">
       <div class="panel-body"><p><b>GIS Technician </b></p>
       	<p>City of Concord GIS Department | Concord, CA</p>
