--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Portfolio of Whitney K. Newcomb</title>
+<title>Portfolio of Whitney K. Anderson</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="myw3.css" rel="stylesheet" type="text/css">
 <link href="assets/css/main.css" rel="stylesheet" />
@@ -19,7 +19,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <i class="fa fa-remove"></i>
     </a>
     <img src="Images/GradPic.jpg" style="width:45%;" class="w3-round"><br><br>
-    <h4 class="w3-padding-0"><b>Whitney K. Newcomb</b></h4>
+    <h4 class="w3-padding-0"><b>Whitney K. Anderson</b></h4>
   </div>
   <a href="index.html" class="w3-padding w3-text-teal">Home</a>
   <a href="Resume_CV.html" class="w3-padding">Resume and CV</a>
@@ -55,42 +55,44 @@ Hello and welcome to my portfolio website that I have created using a combinatio
 <p>I was born in Covina, California but grew up the small desert town of Twentynine Palms in the Mojave Desert of California, just a 5 minute drive from the Joshua Tree National Park entrance where I spent a good deal of my time learning about the natural environment. I was raised by a single, disabled, loving mom who loves the outdoors and who instilled a love a nature in me at an early age. </p>
 <p>I attended Twentynine Palms High School and was very active, joining the Environthon Debate team, National Honors Society, and the International Thespian Society. There I took many science courses and continued to develop my love for the outdoors and the environment. I graduated in 2013 5th in my class with a 4.2 GPA. </p>
 <p>After high school I went directly to Humboldt State University (HSU) as a first generation college student. I switched majors a few times before I finally found the Geospatial Science option of the Environmental Science major and there I fell in love with all things geospatial. </p>
-<p>I graduated HSU in May 2017 as the Outstanding Student for my major option with the highest honors. I completed my B.S. in 4 years which only 11% of students in the major accomplish. I had internships for those 3 summers and a final internship during my last semester. I helped bring back the Geospatial Club where I helped put together 2 very successful GIS Days and held the officers position of Secretary and Vice-President. </p>
+<p>I graduated HSU in May 2017 as the Outstanding Student for my major option with the highest honors. I completed my B.S. in 4 years which only 11% of students in the major accomplish. I had internships for those 3 summers and a final internship during my last semester. I helped bring back the Geospatial Club where I helped put together 2 very successful GIS Days and held the officers position of Secretary and Vice-President. I was also very active in assisting with the creation of the HSU UAV Program! </p>
 <p> <b>At HSU the most important thing I learned is that to get anything done in this chaotic and often messed up world it takes a lot of really smart people working really hard for a long time. One person can do very little – the power and usefulness of teamwork and synergy is what gets things done. </b></p>
-	<p> I am currently working as a GIS Intern for the City of Walnut Creek. I am updating the city's Master Address Database, creating web applications, making maps, and learning lots!</p>
+	<p>Formerly Whitney K. Newcomb, I married my best friend Tom Anderson who works as a Microbiologist for The Clorox Company. We have 2 cats, Norin and Yuumi, and many many succulents!</p>
+	<p> I am currently employed by a small geologic consulting company as a Cartographer/GIS Analyst/Drone Pilot/IT Assistant.</p>
 	<p>I am a life-long learned and I am currently studying: </p>
 	<ul>
-		<li>SQL and databases sciences</li>
-		<li>AutoCAD</li>
+		<li>Dance & movement</li>
+		<li>The history of sequoia sempervirens</li>
 		<li>Project Management</li>
+		<li>How to purchase a home in California<li>
  	</ul>
 	<p>I am interested in:</p>
 	<ul>
-		<li>Data collection through the use of Unmanned Aerial Vehicles (UAVs or drones)</li>
+		<li>Data collection through the use of Unmanned Aerial Vehicles (UAVs or drones)(I'm a certified FAA Part 107 UAV Pilot!)</li>
 		<li>Cartographic design</li>
 		<li>Working with large geospatial datasets</li>
 		<li>Helping solve real world problems through the use of GIS</li>	
-		<li>Cartography for the web</li>	
+		<li>Cartography for the web</li>
+		<li>Drought tolerant landscapes</li>
 	</ul>
 
 	<p> I enjoy: </p>	
 	<ul>
 		<li>Collecting maps</li>
 		<li>Hiking and site seeing</li>
-		<li>Red wines</li>
+		<li>Succulent gardening</li>
 		<li>Baking</li>
 		<li>Making maps</li>
 		<li>Table-top and fantasy games</li>
-		<li>Yoga</li>
 		<li>Did I mention that I like maps?</li>
 		<li>Maps.</li>
 	</ul>
 
-<p>I worked hard in school and am now ready to work hard in the workforce and I hope this website convinces you that I have and will continue to produce success. 
+<p>I am a hard worker and I hope this website convinces you that I have and will continue to produce success. 
 Please take your time and peruse through this website where you can find and download my master resume and my cartographic work and get my contact information.</p>
 	<br><p>Thank you so much for your time!</p>
 	<p>Warm Regards,</p>
-<p>Whitney Kelsey Newcomb</p>  
+<p>Whitney Kelsey Anderson</p>  
   
 </div>
 </div>
